--- a/templates/actions/pricereq/PricereqDefault.html
+++ b/templates/actions/pricereq/PricereqDefault.html
@@ -1,4 +1,11 @@
 {if $price_requests}
+
+    <style> 
+        #s-price-request-list-table-container {
+            overflow: auto;
+        }
+    </style>
+
     <div id="s-price-request-list-table-container">
         <table class="zebra single-lined" id="price-request-list">
             <tr class="header">
@@ -60,7 +67,7 @@
                 </td> 
                 <td class="short nowrap align-left" title="[`Product name`]">
                     {if $r.product_id}
-                        <a href="{$r.product.frontend_url}" target="_blank">
+                        <a href="{$r.product.frontend_url}" target="_blank" style="white-space: normal;">
                             {$r.product.name}
                         </a>
                     {/if}
