--- a/css/pricereq.backend.css
+++ b/css/pricereq.backend.css
@@ -13,3 +13,6 @@
 @media (min-width:320px) and (max-width: 1600px) {
     .price-req-form { position: relative; margin: 35px 20px 35px 0; }
 }
+
+#pricereq_shop_pricereq_privacy_text,
+#pricereq_shop_pricereq_privacy_link_text { width: 350px; }
