--- a/css/pricereq.frontend.css
+++ b/css/pricereq.frontend.css
@@ -26,3 +26,5 @@
 .price-req-input textarea:-ms-input-placeholder      { color: #666; }
 
 .price-req-privacy-agreed-wrapper { color: #666; font-size: 12px; line-height: 14px; margin: 10px auto 0; text-align: left; width: 300px; }
+
+#price-req-submit:disabled { cursor: not-allowed; opacity: 0.66; }
