--- a/templates/FrontendHead.html
+++ b/templates/FrontendHead.html
@@ -1,20 +1,21 @@
 {if isset($pricereq_settings.id_in_html) && $pricereq_settings.id_in_html}
-	
-	<style type="text/css">
-		{include file="../css/pricereq.frontend.css" inline}
-	</style>
+
+	<link href="{$wa_url}wa-apps/shop/plugins/pricereq/css/pricereq.frontend.css?{$wa->version()}" rel="stylesheet">
 
 	{if isset($pricereq_settings.phone_masked_input) && strlen($pricereq_settings.phone_masked_input) > 0}
 	<script type="text/javascript" src="{$wa_url}wa-apps/shop/plugins/pricereq/js/jquery.maskedinput.min.js"></script>
 	{/if}
 
-	<script type="text/javascript">
-		{include file="../js/pricereq.frontend.js"}
-	</script>
+	<script src="{$wa_url}wa-apps/shop/plugins/pricereq/js/pricereq.frontend.js?{$wa->version()}" type="text/javascript"></script>
 
 	<script type="text/javascript">
 		(function ($) {
-		    pricereqFrontend.initModule();
+			var localeSettings = {};
+				localeSettings.text_close = '{_wp("Close")}';
+				localeSettings.error_sendmail = '{_wp("Error occurred when sending message")}';
+				localeSettings.error_name_phone = '{_wp("Complete «Phone» or «Email»")}';
+
+		    pricereqFrontend.initModule("{$pricereq_url}", {json_encode($pricereq_settings)}, localeSettings);
 		})(jQuery);
 	</script>
 		
